<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ContactList</string>
    <string name="action_settings">Settings</string>
    <string name="strFname">First Name</string>
    <string name="strLname">Last Name</string>
    <string name="strMobileNo">Mobile</string>
    <string name="strEmailId">EmailID</string>
    <string name="strAddContactBtn">Add Contact</string>
    <string name="hintFName">First Name</string>
    <string name="hintLName">Last Name</string>
    <string name="hintMNumber">Mobile Number</string>
    <string name="hintEmail">Email Id</string>
    <string name="create_contact_option">New Contact</string>
    <string name="title_activity_contact_detail">ContactDetail</string>
    <string name="hello_world">Hello world!</string>
    <string name="contact_name">Contact Name</string>
    <string name="blank_string"></string>

    <color name="myBackground">#101010</color>
    <color name="addContactText">#FFFFFF</color>
    <string name="searchName">Search</string>

</resources>