<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactService" >

    <EditText
        android:id="@+id/editTextlName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextfName"
        android:layout_below="@+id/editTextfName"
        android:ems="10"
        android:hint="@string/hintLName"
        android:inputType="text" />

    <EditText
        android:id="@+id/editTextfName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hintFName"
        android:inputType="text"
        android:textColor="@color/addContactText" >

        <requestFocus />

    </EditText>

    <EditText
        android:id="@+id/editTextMobileNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextlName"
        android:layout_below="@+id/editTextlName"
        android:ems="10"
        android:hint="@string/hintMNumber"
        android:inputType="phone" />



    <EditText
        android:id="@+id/editTextEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextMobileNo"
        android:layout_below="@+id/editTextMobileNo"
        android:ems="10"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/addContactBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEmailId"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="createContact"
        android:text="@string/strAddContactBtn" />

</RelativeLayout>